src/tests/snapshots/swayward__tests__window_opening__check_target_size@omT-dhF500.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    open-maximized true\n    default-window-height { fixed 500; }\n}"
expression: snapshot
---
initial configure:
size: 1248 × 500, bounds: 1248 × 688, states: []

post-map configures:
size: 1248 × 688, bounds: 1248 × 688, states: [Activated]
